src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: 222 47% 11%;
  --text-primary: 215 20% 65%;
  --text-title: 210 40% 96%;
  --text-title-secondary: 213 27% 84%;
  --text-highlight: 214 32% 91%;
}

html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  font-family: var(--font-montserrat);
  scroll-behavior: smooth;

  @media (min-width: 768px) {
    scroll-padding-top: 86px;
  }
}

body {
  color: hsl(var(--text-primary));
  background: hsl(var(--background));
  line-height: 1.5;
  height: 100%;
}

body::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

body::-webkit-scrollbar-track {
  background-color: transparent;
}

body::-webkit-scrollbar-thumb {
  background-color: #475569;
  border-radius: 9999px;
}

body::-webkit-scrollbar-thumb:hover {
  background-color: #3b4558;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-barlow-condensed);
}

h2,
h3,
h4,
h5,
h6 {
  color: hsla(var(--text-title-secondary));
}

p {
  font-family: var(--font-montserrat);
}

code,
pre {
  font-family: var(--font-fira-code);
}

pre {
  overflow-x: auto;
  padding: 1rem 0;
  font-size: 1.125rem;

  @media (min-width: 768px) {
    font-size: 1.25rem;
  }
}

pre {
  background: #1e293b;
  border-radius: 8px;
}

pre [data-line] {
  padding: 0rem 1rem 0 1rem;
}

code {
  counter-reset: line;
}

code > [data-line]::before {
  counter-increment: line;
  content: counter(line);

  display: inline-block;
  width: 1rem;
  padding-right: 1.5rem;
  text-align: right;
  color: gray;
}

code[data-line-numbers-max-digits="2"] > [data-line]::before {
  width: 1.5rem;
}

code[data-line-numbers-max-digits="3"] > [data-line]::before {
  width: 1.5rem;
}

.scrollbar::-webkit-scrollbar {
  width: 2px;
  height: 2px;
}

.scrollbar::-webkit-scrollbar-track {
  background-color: transparent;
}

.scrollbar::-webkit-scrollbar-thumb {
  background-color: #475569;
  border-radius: 9999px;
}

.scrollbar::-webkit-scrollbar-thumb:hover {
  background-color: #3b4558;
}

